<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@android:drawable/ic_menu_preferences" >

    <PreferenceCategory
        android:summary="@string/selection_category_summary"
        android:title="@string/selection_category_title" >
        <ListPreference
            android:enabled="false"
            android:key="predefined_hackspace"
            android:summary="@string/predefined_hackspace_summary"
            android:title="@string/predefined_hackspace_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="custom_hackspace"
            android:summary="@string/custom_hackspace_summary"
            android:title="@string/custom_hackspace_title" />

        <EditTextPreference
            android:defaultValue="http://"
            android:enabled="false"
            android:key="custom_url"
            android:summary="@string/custom_url_summary"
            android:title="@string/custom_url_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/widget_configuration_summary"
        android:title="@string/widget_configuration_title" >
        <ListPreference
            android:defaultValue="1800000"
            android:entries="@array/updateArray"
            android:entryValues="@array/updateValues"
            android:key="update_frequency"
            android:summary="@string/update_frequency_summary"
            android:title="@string/update_frequency_title" />
    </PreferenceCategory>

</PreferenceScreen>